--- a/resources/scss/components/_component.site-header.scss
+++ b/resources/scss/components/_component.site-header.scss
@@ -110,7 +110,7 @@
 
   .site-brand__logo {
     width: 155px;
-    height: 30px;
+    height: 32px;
   }
 
   .site-brand {
